<resources>
    <string name="app_name">QuickSugars</string>
    <string name="action_settings">Settings</string>
    <string name="blood_sugar_entry">Blood Sugar Entry</string>
    <string name="medication_selection">Select Medications for Tracking</string>
    <string name="weight_entry">Weight Measurements</string>
    <string name="food_items">Food Record</string>
    <string name="symptom_record">Symptom Record</string>
    <string name="medication_record">Medication Tracking</string>
    <string name="entries_complete">Entries Complete</string>
    <string name="title_activity_weight_record_entry">weight_record_entry</string>
    <string name="today_weight_button">Tap to enter todays weight</string>
    <string name="previous_weight_button">Tap to enter weight from previous day</string>
    <string name="title_activity_medication_edditing_page">MedicationEdditingPage</string>
    <string name="search_hint">Enter a food item for search</string>
    <string name="scheduled_medication_list">ScheduledMedicationsList</string>
    <string name="select_entries_to_edit">SelectEntriesToEdit</string>
    <string-array name="times">
        <item>0000</item>
        <item>0030</item>
        <item>0100</item>
        <item>0130</item>
        <item>0200</item>
        <item>0230</item>
        <item>0300</item>
        <item>0330</item>
        <item>0400</item>
        <item>0430</item>
        <item>0500</item>
        <item>0530</item>
        <item>0600</item>
        <item>0630</item>
        <item>0700</item>
        <item>0730</item>
        <item>0800</item>
        <item>0830</item>
        <item>0900</item>
        <item>0930</item>
        <item>1000</item>
        <item>1030</item>
        <item>1100</item>
        <item>1130</item>
        <item>1200</item>
        <item>1230</item>
        <item>1300</item>
        <item>1330</item>
        <item>1400</item>
        <item>1430</item>
        <item>1500</item>
        <item>1530</item>
        <item>1600</item>
        <item>1630</item>
        <item>1700</item>
        <item>1730</item>
        <item>1800</item>
        <item>1830</item>
        <item>1900</item>
        <item>1930</item>
        <item>2000</item>
        <item>2030</item>
        <item>2100</item>
        <item>2130</item>
        <item>2200</item>
        <item>2230</item>
        <item>2300</item>
        <item>2330</item>
    </string-array>
    <string name="title_activity_food_item_entry">Food Item Entry</string>
    <string name="title_activity_search_food_items">Search Food Items</string>
    <string name="title_activity_manual_food_input">Manual Food Input</string>
    <string name="title_activity_alarm_receiver">Alarm Receiver</string>
    <string name="title_activity_completion_of_medication_notification">
        Completion Of Medication Notification
    </string>
    <string name="title_activity_delayed_medication_timer">Delayed Medication Timer</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="title_activity_blood_sugar_check_reminder">BloodSugar Check Reminder</string>
    <string name="title_activity_scheduled_medications_list">Scheduled Medications List</string>
    <string name="title_activity_symptom_record_entry">Symptom Record Entry</string>
    <string name="title_activity_edit_entries">Edit Entries</string>
    <string name="title_activity_edit_selected_entry">Edit Selected Entry</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_set_up_screen">Set Up Screen</string>
    <string name="title_activity_send_records_by_email">Send Records By Email</string>
    <string name="title_activity_create_pdf">CreatePDF</string>
    <string name="MedicationSelectionPage">Medication Selection Page</string>
    <string name="WeightRecordEntry">Weight Record Entry</string>
    <string name="create_md_report">Create Report to MD</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
